
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "atlas_local_sdk"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow          = "1.0.98"
atlas-local-sdk = { version = "0.1.0", registry = "kellnr" }
bollard         = "0.19.2"
napi            = { version = "3.0.0", features = ["async", "anyhow"] }
napi-derive     = "3.0.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"
